Change color of button delete

--- a/views/employee/delete.ejs
+++ b/views/employee/delete.ejs
@@ -21,7 +21,7 @@
         </div>
     </div>
     <div class="form-group">
-        <button type="submit" class="btn btn-info"><i class="fa fa-trash"></i> Delete</button>
+        <button type="submit" class="btn btn-danger"><i class="fa fa-trash"></i> Delete</button>
         <a class="btn btn-secondary" href="/employee/list"><i class="fa fa-list-alt"></i> View All</a>
     </div>
 </form>
